wordpress2/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f compose.yaml convert
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: wordpress
  name: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: wordpress
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f compose.yaml convert
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: wordpress
    spec:
      serviceAccountName: wordpress-sa
      containers:
        - env:
            - name: WORDPRESS_DB_HOST
              value: db
            - name: WORDPRESS_DB_NAME
              value: wordpress
            - name: WORDPRESS_DB_USER
              value: wordpress
            - name: WORDPRESS_DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: password
                  key: wordpress-db-password
          image: wordpress:latest
          name: wordpress
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: secrets
              mountPath: /mnt/secrets-store
              readOnly: true
      volumes:
        - name: secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: azure-kv
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-loadbalancer
spec:
  selector:
    io.kompose.service: wordpress
  type: LoadBalancer
  ports:
  - port: 80
